--- a/src/app/animal-list/animal-list.component.html
+++ b/src/app/animal-list/animal-list.component.html
@@ -12,7 +12,7 @@
     <td>{{animal.datum_rodjenja}}</td>
     <td>
       <button class="btn btn-danger"
-        (click)="removeContact(contact)">
+        (click)="removeAnimal(animal)">
         X
       </button>
     </td>
